# gameoflife

./: Cargo.toml  README.md  index.css  index.html
src/: main.rs  shader.wgsl  window.rs
