[package]
name = "life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
wgpu = { version = "0.15", features = ["webgl"]}
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
raw-window-handle = "0.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
axum = "0.6.7"
axum_static = "1.2.1"

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.25.0", features = ["macros", "sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "MouseEvent",
    "DomRect",
]}
js-sys = "0.3.61"
bytemuck = { version = "1.13.1", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
